--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "JSON brain for Jarvis",
   "main": "index.js",
   "dependencies": {
+    "async": "~0.2.6",
     "extend": "~1.1.3",
     "mkdirp": "~0.3.5"
   },
